# badged

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nix/: hm-module.nix  package.nix
src/: agent.rs  authority.rs  listener.rs  main.rs  ui.rs
