[package]
name = "badged"
version = "0.2.0"
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
description = "A polkit authentication agent for Linux window managers"
authors = ["Jose Fernandez <me@jrfernandez.com>"]
repository = "https://github.com/jfernandez/badged"
homepage = "https://github.com/jfernandez/badged"
documentation = "https://github.com/jfernandez/badged"
keywords = ["polkit", "authentication", "gtk4", "fingerprint", "linux"]
categories = ["authentication", "gui"]

[dependencies]
gtk4 = { version = "0.10.2", default-features = false, features = ["v4_6"] }
polkit-agent-rs = "0.3.0"
# glib 0.20 — must match polkit-agent-rs for GObject subclassing in listener.rs
glib = "0.20"

[profile.release]
lto = true
strip = true
